11-kubernetes/wcg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: word-cloud-generator-service
  labels:
    app: word-cloud-generator
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  selector:
    app: word-cloud-generator
